<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    >

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="107dp"
        app:srcCompat="@drawable/logo_turizm" />

    <TextView
        android:id="@+id/turizmSikayetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/turizm_sikayet" />

    <EditText
        android:id="@+id/aramaEdt"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/turizmSikayetText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/acilis_arama_text"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/veyaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/aramaEdt"
        android:layout_marginTop="34dp"
        android:text="@string/veya" />

    <Button
        android:id="@+id/girisYapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/veyaText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/giris_yap" />

</RelativeLayout>