<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hakankurt.turizmsikayet.UyeOl">

    <EditText
        android:id="@+id/kullaniciAdEdt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/kullaniciSifreEdt"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/adsoyadText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/kullaniciEpostaEdt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/kullaniciAdEdt"
        android:layout_below="@+id/kullaniciAdEdt"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/epostanızText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/kullaniciSifreEdt"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kullaniciEpostaEdt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/sifrenizText"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/sozlesmeTextView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/kullaniciSifreEdt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:maxLines="3"
        android:text="Üye Ol butonuna tıklayarak TurizmSikayet'in Kullanıcı, Gizlilik ve Çerez Sözleşmeleri'ni
    kabul etmiş sayılacaksınız."
        android:textAlignment="center" />

    <Button
        android:id="@+id/uyeOlBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sozlesmeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/uye_ol" />

    <TextView
        android:id="@+id/zatenUyeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uyeOlBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/zatenUyeText"
        android:textAlignment="center"
        android:textSize="14dp"/>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/kullaniciAdEdt"
        android:layout_marginEnd="14dp"
        android:layout_toStartOf="@+id/kullaniciAdEdt"
        app:srcCompat="@drawable/icon_user_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView7"
        android:layout_alignTop="@+id/kullaniciEpostaEdt"
        app:srcCompat="@drawable/icon_envelope_24" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView9"
        android:layout_alignTop="@+id/kullaniciSifreEdt"
        app:srcCompat="@drawable/icon_password_24" />

</RelativeLayout>
